--- a/src/Ming.Abstractions/Ming.Abstractions.csproj
+++ b/src/Ming.Abstractions/Ming.Abstractions.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>    	
+    <Version>1.0.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Copyright>None</Copyright>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/MingLu8/Ming.Abstractions</PackageProjectUrl>    	
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
