--- a/src/Ming.Abstractions/Ming.Abstractions.csproj
+++ b/src/Ming.Abstractions/Ming.Abstractions.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.3</Version>    	
+    <Version>1.0.4-alpha$(VersionSuffix)</Version>    	
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
